#1 Refined the API and its documentation
