# ctt-server/openapi_server/openapi/openapi.yaml
@@ -1,8 +1,11 @@
 openapi: 3.0.0
 info:
-  description: |
-    This is the Radon CTT API.
-  title: Radon CTT API
+  description: 'This is API of the RADON Continuous Testing Tool (CTT) Server: <a
+    href="https://github.com/radon-h2020/radon-ctt">https://github.com/radon-h2020/radon-ctt<a/>'
+  license:
+    name: Apache License, Version 2.0
+    url: https://opensource.org/licenses/Apache-2.0
+  title: RADON CTT Server API
   version: 1.0.0-oas3
 servers:
 - url: /RadonCTT
@@ -13,14 +16,14 @@ tags:
 - name: Executors
 - name: Results
 paths:
-  /deployment/{deploymentId}:
+  /deployment/{deployment_id}:
     get:
       operationId: get_deployment_by_id
       parameters:
-      - description: Id of deployment to return
+      - description: ID of the deployment to return
         explode: false
         in: path
-        name: deploymentId
+        name: deployment_id
         required: true
         schema:
           format: int64
@@ -60,19 +63,19 @@ paths:
         $ref: '#/components/requestBodies/POSTDeployments'
       responses:
         "201":
-          description: Successfull operation
+          description: Successful operation
       summary: Creates a deployment
       tags:
       - Deployments
       x-openapi-router-controller: openapi_server.controllers.deployments_controller
-  /executor/{executorId}:
+  /executor/{executor_id}:
     get:
       operationId: get_executor_by_id
       parameters:
-      - description: Id of executor to return
+      - description: ID of the executor to return
         explode: false
         in: path
-        name: executorId
+        name: executor_id
         required: true
         schema:
           format: int64
@@ -85,7 +88,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Executor'
           description: Success
-      summary: Retrieve a executor
+      summary: Retrieve an executor
       tags:
       - Executors
       x-openapi-router-controller: openapi_server.controllers.executors_controller
@@ -117,14 +120,14 @@ paths:
       tags:
       - Executors
       x-openapi-router-controller: openapi_server.controllers.executors_controller
-  /project/{projectId}:
+  /project/{project_id}:
     delete:
       operationId: delete_project
       parameters:
-      - description: Id of project to delete
+      - description: ID of the project to delete
         explode: false
         in: path
-        name: projectId
+        name: project_id
         required: true
         schema:
           format: int64
@@ -140,10 +143,10 @@ paths:
     get:
       operationId: get_project_by_id
       parameters:
-      - description: Id of project to return
+      - description: ID of the project to return
         explode: false
         in: path
-        name: projectId
+        name: project_id
         required: true
         schema:
           format: int64
@@ -173,7 +176,7 @@ paths:
                 type: array
                 x-content-type: application/json
           description: Success
-      summary: Get a list of projects
+      summary: Get a list of all projects
       tags:
       - Projects
       x-openapi-router-controller: openapi_server.controllers.projects_controller
@@ -188,14 +191,14 @@ paths:
       tags:
       - Projects
       x-openapi-router-controller: openapi_server.controllers.projects_controller
-  /result/{resultId}:
+  /result/{result_id}:
     get:
       operationId: get_result_by_id
       parameters:
-      - description: Id of Result to return
+      - description: ID of the result to return
         explode: false
         in: path
-        name: resultId
+        name: result_id
         required: true
         schema:
           format: int64
@@ -212,14 +215,14 @@ paths:
       tags:
       - Results
       x-openapi-router-controller: openapi_server.controllers.results_controller
-  /result/{resultId}/download:
+  /result/{result_id}/download:
     get:
       operationId: download_result_by_id
       parameters:
-      - description: Id of result to download
+      - description: ID of the result to download
         explode: false
         in: path
-        name: resultId
+        name: result_id
         required: true
         schema:
           format: int64
@@ -255,14 +258,14 @@ paths:
       tags:
       - Results
       x-openapi-router-controller: openapi_server.controllers.results_controller
-  /testartifact/{testartifactId}:
+  /testartifact/{testartifact_id}:
     get:
       operationId: get_testartifact_by_id
       parameters:
-      - description: Id of testartifact to return
+      - description: ID of the test artifact to return
         explode: false
         in: path
-        name: testartifactId
+        name: testartifact_id
         required: true
         schema:
           format: int64
@@ -275,18 +278,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/Testartifact'
           description: Success
-      summary: Retrieve a testartifact
+      summary: Retrieve a test artifact
       tags:
       - Testartifacts
       x-openapi-router-controller: openapi_server.controllers.testartifacts_controller
-  /testartifact/{testartifactId}/download:
+  /testartifact/{testartifact_id}/download:
     get:
       operationId: download_testartifact_by_id
       parameters:
-      - description: Id of testartifact to download
+      - description: ID of the test artifact to download
         explode: false
         in: path
-        name: testartifactId
+        name: testartifact_id
         required: true
         schema:
           format: int64
@@ -301,7 +304,7 @@ paths:
                 type: string
                 x-content-type: application/json
           description: Success
-      summary: Downloads the generated testartifact
+      summary: Downloads the generated test artifact
       tags:
       - Testartifacts
       x-openapi-router-controller: openapi_server.controllers.testartifacts_controller
@@ -318,7 +321,7 @@ paths:
                 type: array
                 x-content-type: application/json
           description: Success
-      summary: Get all testartifacts
+      summary: Get all test artifacts
       tags:
       - Testartifacts
       x-openapi-router-controller: openapi_server.controllers.testartifacts_controller
@@ -329,7 +332,7 @@ paths:
       responses:
         "201":
           description: Success
-      summary: Creates a testartifact
+      summary: Creates a test artifact
       tags:
       - Testartifacts
       x-openapi-router-controller: openapi_server.controllers.testartifacts_controller
